--- a/java-event-driven-tests/pom.xml
+++ b/java-event-driven-tests/pom.xml
@@ -284,6 +284,19 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>10.0.4</version>
+        <configuration>
+          <suppressionFiles>
+            <suppressionFile>owasp-suppressions.xml</suppressionFile>
+          </suppressionFiles>
+          <failBuildOnCVSS>7</failBuildOnCVSS>
+          <outputDirectory>${project.build.directory}/dependency-check</outputDirectory>
+          <format>ALL</format>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
