--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,8 @@ robot-framework-python-tests/reports/
 robot-framework-python-tests/output.txt
 robot-framework-python-tests/*.log
 robot-framework-python-tests/*.xml
+robot-framework-python-tests/log.html
+robot-framework-python-tests/report.html
 
 # Node.js dependencies
 node_modules/
